--- a/templates/launchpad.html
+++ b/templates/launchpad.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Launchpad</title>
+<head>
 
-        <script>
-            window["sap-ushell-config"] = CONFIG;
-        </script>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Bookshop</title>
 
-        <script src="LIB_URL/resources/sap-ui-core.js"
-            data-sap-ui-async="true"
-            data-sap-ui-libs="sap.m, sap.ushell, sap.ui.core, sap.f, sap.ui.table, sap.ui.layout"
-            data-sap-ui-compatVersion="edge"
-            data-sap-ui-theme="THEME"
-            data-sap-ui-frameOptions="allow"
-            data-sap-ui-bindingSyntax="complex"
-        ></script>
+	<script>
+		window["sap-ushell-config"] = {
+			defaultRenderer: "fiori2",
+			applications: {}
+		};
+	</script>
 
-        <!-- moved the sandbox.js script after the UI5 bootstrap -->
-        <script src="LIB_URL/test-resources/sap/ushell/bootstrap/sandbox.js"></script>
+	<script id="sap-ushell-bootstrap" src="LIB_URL/test-resources/sap/ushell/bootstrap/sandbox.js"></script>
+	<script id="sap-ui-bootstrap" src="LIB_URL/resources/sap-ui-core.js"
+			data-sap-ui-libs="sap.m, sap.ushell, sap.collaboration, sap.ui.layout"
+			data-sap-ui-compatVersion="edge"
+			data-sap-ui-theme="THEME"
+			data-sap-ui-frameOptions="allow"
+	></script>
+	<script>
+		sap.ui.getCore().attachInit(()=> sap.ushell.Container.createRenderer().placeAt("content"))
+	</script>
 
-        <script>
-
-            sap.ui.getCore().attachInit(function () {
-                // call the boot-task of the sandbox.js manually
-                window['sap-ui-config']['xx-bootTask'](function() {
-                    // initialize the ushell sandbox component
-                    sap.ushell.Container.createRenderer().placeAt("content");
-                });
-            });
-
-        </script>
-    </head>
-    <body class="sapUiBody" id="content"></body>
+</head>
+<body class="sapUiBody" id="content"></body>
 </html>
