feat: define `modulePaths` in launchpad.html file

--- a/templates/async/launchpad.html
+++ b/templates/async/launchpad.html
@@ -48,7 +48,8 @@
                     },
                 },
             },
-            applications: {}
+            applications: {},
+            /* MODULE_PATHS */
         };
     </script>
 
